--- a/Tinyllama_vs_Chatgpt4o/requirements.txt
+++ b/Tinyllama_vs_Chatgpt4o/requirements.txt
@@ -1,5 +1,5 @@
 pandas==2.1.3
-numpy==1.24.3
+numpy>=1.26.0,<2
 streamlit==1.28.2
 plotly==5.18.0
 python-dotenv==1.0.0
@@ -9,3 +9,5 @@ matplotlib==3.8.2
 seaborn==0.13.0
 typing-extensions==4.8.0
 python-dateutil==2.8.2
+setuptools>=65.5.1
+wheel>=0.40.0
